# SMDK

./: CHANGELOG.md  CONTRIBUTOR.md  LICENSE  README.md
lib/cxl_cli/: .clang-format  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  README.md  acpi.h  clean_config.sh  config.h.meson  meson.build  meson_options.txt  ndctl.spec.in  rpmbuild.sh  test.h  version.h.in
lib/cxl_cli/Documentation/: COPYING  asciidoc.conf.in  asciidoctor-extensions.rb.in  copyright.txt  manpage-base.xsl  manpage-normal.xsl
lib/cxl_cli/Documentation/cxl/: bus-option.txt  cxl-create-region.txt  cxl-destroy-region.txt  cxl-disable-bus.txt  cxl-disable-memdev.txt  cxl-disable-port.txt  cxl-disable-region.txt  cxl-enable-memdev.txt  cxl-enable-port.txt  cxl-enable-region.txt  cxl-free-dpa.txt  cxl-list.txt  cxl-monitor.txt  cxl-read-labels.txt  cxl-reserve-dpa.txt  cxl-set-alert-config.txt  cxl-set-partition.txt  cxl-update-firmware.txt  cxl-wait-sanitize.txt  cxl-write-labels.txt  cxl-zero-labels.txt  cxl.txt  debug-option.txt  decoder-option.txt  human-option.txt  labels-description.txt  labels-options.txt  memdev-option.txt  meson.build  region-description.txt  xable-no-op.txt
lib/cxl_cli/Documentation/cxl/lib/: cxl_new.txt  libcxl.txt  meson.build
lib/cxl_cli/Documentation/daxctl/: daxctl-create-device.txt  daxctl-destroy-device.txt  daxctl-disable-device.txt  daxctl-enable-device.txt  daxctl-list.txt  daxctl-migrate-device-model.txt  daxctl-offline-memory.txt  daxctl-online-memory.txt  daxctl-reconfigure-device.txt  daxctl.txt  meson.build  movable-options.txt  region-option.txt  verbose-option.txt
lib/cxl_cli/Documentation/ndctl/: ars-description.txt  dimm-description.txt  human-option.txt  intel-nvdimm-security.txt  labels-description.txt  labels-options.txt  meson.build  namespace-description.txt  ndctl-activate-firmware.txt  ndctl-check-labels.txt  ndctl-check-namespace.txt  ndctl-clear-errors.txt  ndctl-create-namespace.txt  ndctl-destroy-namespace.txt  ndctl-disable-dimm.txt  ndctl-disable-namespace.txt  ndctl-disable-region.txt  ndctl-enable-dimm.txt  ndctl-enable-namespace.txt  ndctl-enable-region.txt  ndctl-freeze-security.txt  ndctl-init-labels.txt  ndctl-inject-error.txt  ndctl-inject-smart.txt  ndctl-list.txt  ndctl-load-keys.txt  ndctl-monitor.txt  ndctl-read-infoblock.txt  ndctl-read-labels.txt  ndctl-remove-passphrase.txt  ndctl-sanitize-dimm.txt  ndctl-setup-passphrase.txt  ndctl-start-scrub.txt  ndctl-update-firmware.txt  ndctl-update-passphrase.txt  ndctl-wait-overwrite.txt  ndctl-wait-scrub.txt  ndctl-write-infoblock.txt  ndctl-write-labels.txt  ndctl-zero-labels.txt  (+6 more)
lib/cxl_cli/ccan/array_size/: array_size.h
lib/cxl_cli/ccan/build_assert/: build_assert.h
lib/cxl_cli/ccan/check_type/: check_type.h
lib/cxl_cli/ccan/container_of/: container_of.h
lib/cxl_cli/ccan/endian/: endian.h
lib/cxl_cli/ccan/list/: list.c  list.h
lib/cxl_cli/ccan/minmax/: minmax.h
lib/cxl_cli/ccan/short_types/: short_types.h
lib/cxl_cli/ccan/str/: debug.c  str.c  str.h  str_debug.h
lib/cxl_cli/contrib/: meson.build  ndctl  nfit_test_depmod.conf  nvdimm-security.conf
lib/cxl_cli/cxl/: builtin.h  bus.c  cxl-monitor.service  cxl.c  cxl_mem.h  event_trace.c  event_trace.h  filter.c  filter.h  json.c  json.h  libcxl.h  list.c  memdev.c  meson.build  monitor.c  port.c  region.c  smdk.c  smdk_lat_matrix.c
lib/cxl_cli/cxl/lib/: libcxl.c  libcxl.pc.in  libcxl.sym  meson.build  private.h
lib/cxl_cli/cxl/lib/smdk/: smdk_libcxl.c  smdk_private.h
lib/cxl_cli/cxl/smdk/: smdk_control.c  smdk_control.h  smdk_lat_matrix.c  smdk_memdev.c
lib/cxl_cli/daxctl/: 90-daxctl-device.rules  acpi.c  builtin.h  daxctl.c  daxctl.example.conf  daxdev-reconfigure@.service  device.c  filter.c  filter.h  json.c  json.h  libdaxctl.h  list.c  meson.build  migrate.c
lib/cxl_cli/daxctl/lib/: daxctl.conf  libdaxctl-private.h  libdaxctl.c  libdaxctl.pc.in  libdaxctl.sym  meson.build
lib/cxl_cli/ndctl/: action.h  bat.c  builtin.h  bus.c  check.c  create-nfit.c  dimm.c  filter.c  filter.h  firmware-update.h  inject-error.c  inject-smart.c  json-smart.c  json.c  json.h  keys.c  keys.h  keys.readme  libndctl-nfit.h  libndctl.h  list.c  load-keys.c  meson.build  monitor.c  monitor.conf  namespace.c  namespace.h  ndctl-monitor.service  ndctl.c  ndctl.conf  ndctl.h  region.c  test.c
lib/cxl_cli/ndctl/lib/: .gitignore  ars.c  dimm.c  firmware.c  hpe1.c  hpe1.h  hyperv.c  hyperv.h  inject.c  intel.c  intel.h  libndctl.c  libndctl.pc.in  libndctl.sym  meson.build  msft.c  msft.h  nfit.c  papr.c  papr.h  papr_pdsm.h  private.h  smart.c
lib/cxl_cli/rhel/: meson.build
lib/cxl_cli/scripts/: daxctl-qemu-hmat-setup  do_abidiff  docsurgeon  docsurgeon_parser_generator.m4  prepare-release.sh
lib/cxl_cli/sles/: header  meson.build
lib/cxl_cli/test/: ack-shutdown-count-set.c  align.sh  btt-check.sh  btt-errors.sh  btt-pad-compat.sh  btt-pad-compat.xxd  clear.sh  common  core.c  create.sh  cxl-create-region.sh  cxl-destroy-region.sh  cxl-events.sh  cxl-labels.sh  cxl-poison.sh  cxl-qos-class.sh  cxl-region-sysfs.sh  cxl-sanitize.sh  cxl-security  cxl-security.sh  cxl-topology.sh  cxl-update-firmware.sh  cxl-xor-region.sh  dax-dev.c  dax-errors.c  dax-ext4.sh  dax-pmd.c  dax-poison.c  dax.sh  daxctl-create.sh  daxctl-devices.sh  daxdev-errors.c  daxdev-errors.sh  device-dax-fio.sh  device-dax.c  dm.sh  dsm-fail.c  firmware-update.sh  hugetlb.c  inject-error.sh  (+23 more)
lib/cxl_cli/tools/: meson-vcs-tag.sh
lib/cxl_cli/util/: abspath.c  bitmap.c  bitmap.h  event_trace.c  event_trace.h  fletcher.h  help.c  iomem.c  iomem.h  json.c  json.h  list.h  log.c  log.h  main.c  main.h  meson.build  parse-configs.c  parse-configs.h  parse-options.c  parse-options.h  size.c  size.h  strbuf.c  strbuf.h  sysfs.c  sysfs.h  usage.c  util.h  wrapper.c
lib/qemu/qemu-8.1.50/hw/cxl/: Kconfig  cxl-chmu.c  cxl-component-utils.c  cxl-cpmu.c  cxl-device-utils.c  cxl-events.c  cxl-host.c  cxl-mailbox-utils.c  i2c_mctp_cxl.c  meson.build  switch-mailbox-cci.c
src/test/heap_allocator/comp_api_java/jniTest/: CMakeLists.txt  LICENSE  javaJNITest.cpp  (+2 more)
(+3011 files in other folders)
